--- a/assets/src/scss/import-scss/reset.scss
+++ b/assets/src/scss/import-scss/reset.scss
@@ -1,12 +1,14 @@
+
 body {
-  font-family: 'Open Sans', sans-serif;
+
   margin: 0;
   padding: 0;
   font-size: 16px;
   line-height: 1.5;
   font-weight: normal;
   font-style: normal;
-  color: #333333;
+  color: $defaultColor;
+  font-family: $defaultFont;
 }
 
 .container {
@@ -25,6 +27,10 @@ ul, li, p {
 
 a {
   text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 img {
@@ -35,4 +41,27 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   font-weight: bold;
+}
+
+.title {
+  color: $black;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+time {
+  color: $blue;
+  font-weight: 700;
+}
+
+button,
+button:before,
+button:focus {
+  outline: none;
+}
+
+input,
+input:before,
+input:focus {
+  outline: none;
 }
